--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -40,5 +40,5 @@ jobs:
         run: npm install -g surge
       
       - name: Deploying on surge
-        run: surge ./build http://btcmp2020class2.surge.sh/ --token ${{secrets.MYTOKEN}} 
+        run: surge ./build btcmp2020class2.surge.sh --token ${{secrets.MYTOKEN}} 
    
