--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -34,7 +34,7 @@ jobs:
           cmd: install #npm start or yarn start(by default it happen automatically)
     
       - name: creating build
-        run: npm build
+        run: npm run-script build
         
       - name: installing surge
         run: npm install -g surge
