--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -40,5 +40,8 @@ jobs:
         run: npm install -g surge
       
       - name: Deploying on surge
-        run: surge ./build btcmp2020class2.surge.sh --token ${{secrets.MYTOKEN}} 
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{Secrets.MYTOKEN}}
+          publish_dir: ./build
    
