--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -1,15 +1,10 @@
-# This is a basic workflow to help you get started with Actions
+name: CI
 
-name: Bootcamp2020class2
-
-# Controls when the action will run. 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,28 +15,25 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2-beta
-        with:
-          version: 14  
-      - name: Github action for  Yarn or npm
-        uses: linchpin/action-build-yarn-npm@master
-        with:
-          # npm/yarn command
-          cmd: install #npm start or yarn start(by default it happen automatically)
-    
-
-      - name: installing surge
-        run: npm install -g surge
-
-      - name: creating build
-        run: npm build
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2-beta
+      with: 
+        version: 14
         
-   
-      
-      - name: Deploying on surge
-        run: surge .\build btcmp2020class2.surge.sh --token ${{secrets.MYTOKEN}} 
-   
+    - name: Github action for  Yarn or npm
+      uses: linchpin/action-build-yarn-npm@master
+      with:
+          # npm/yarn command
+        cmd: install #npm start or yarn start(by default it happen automatically)
+    
+    - name: Creating build
+      run: npm build
+    
+    - name: installing surge  
+      run: npm install -g surge
+    
+    - name: deploying on surge
+      run: surge ./build http://btcmp2020class2.surge.sh/ --token ${{secrets.MYTOKEN}}
