--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -30,10 +30,14 @@ jobs:
         cmd: install #npm start or yarn start(by default it happen automatically)
     
     - name: Creating build
-      run: npm build
+    - run: npm install
+    - run: npm run build --if-present
+    - run: npm test
+      env:
+        CI: true
     
     - name: installing surge  
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://btcmp2020class2.surge.sh/ --token ${{secrets.MYTOKEN}}
+      run: surge ./build "http://btcmp2020class2.surge.sh/" --token ${{secrets.MYTOKEN}}
