--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -37,4 +37,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://btcmp2020class2.surge.sh/ --token ${{secrets.MYTOKEN}}
+      run: surge ./ http://session2btcmp.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
