--- a/.github/workflows/class2.yml
+++ b/.github/workflows/class2.yml
@@ -37,4 +37,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./ http://session2btcmp.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ cls2_btcmp.surge.sh --token ${{secrets.SURGE_TOKEN}}
